JDK-7019557 : SharedMiscDataSize too small for 64-bit fastdebug JVM
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Affected Version: 7
  • Priority: P3
  • Status: Closed
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2011-02-15
  • Updated: 2011-04-24
  • Resolved: 2011-04-24
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 Other
7Fixed hs21Fixed
Description
$ java -d64 -Xshare:dump

Loading classes to share ... done. 
Rewriting and unlinking classes ... done. 
Calculating hash values for String objects .. done. 
Calculating fingerprints ... done. 
Removing unshareable information ... done. 
Moving common symbols to metadata section at 0xfffffd7fcda06498 ... done. 
Moving vmSymbols to metadata section at 0xfffffd7fcdca1188 ... done. 
Moving the remaining symbols to metadata section at 0xfffffd7fcdca2a48 ... done. 
Moved 50335 symbols, 2737632 bytes.
Moving pre-ordered read-only objects to shared space at 0xfffffd7fcc200000 ... done. 
Moving read-only objects to shared space at 0xfffffd7fcc762740 ... done. 
Moving string char arrays to shared space at 0xfffffd7fcc765290 ... done. 
Moving pre-ordered read-write objects to shared space at 0xfffffd7fccc00000 ... done. 
Moving read-write objects to shared space at 0xfffffd7fcd7baf40 ... done. 
Moving String objects to shared space at 0xfffffd7fcd8303b8 ... done. 
Read-write space ends at 0xfffffd7fcd8aec90, 13298832 bytes.
Updating references to shared objects ... done. 

Java HotSpot(TM) 64-Bit Server VM warning: 
The shared miscellaneous data space is not large enough
to preload requested classes. Use -XX:SharedMiscDataSize=
to increase the initial size of shared miscellaneous data space.

This was with a fastdebug build of jdk7-b129 on solaris.

Comments
EVALUATION Summary: Increase default SharedMiscDataSize Reviewed-by: dcubed, kamg
21-02-2011

EVALUATION http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/6e70f1bb7f6f
19-02-2011

EVALUATION Probably because the symbols were added to the shared misc data section.
18-02-2011

WORK AROUND Add -XX:SharedMiscDataSize=5m to the command line.
15-02-2011