7019557: SharedMiscDataSize too small for 64-bit fastdebug JVM

Increase default SharedMiscDataSize

Reviewed-by: dcubed, kamg